# rust-sandbox

./: .gitignore  README.md
Notes/: Auth-Credentials.rs  General-Rust.rs  Notes.rs  challenge-notes.rs  errors.rs  main.rs  mysql-discoveries.rs
diesel_demo/: .env  Cargo.toml
diesel_demo/migrations/20170219005456_trial_migration/: up.sql
diesel_demo/src/: lib.rs
error-handling/: Cargo.toml  error-notes.rs
error-handling/errors/: mod.rs
error-handling/examples/: listener.rs
error-handling/src/: main.rs
fundamentals/: Cargo.toml  concept.rs  json-notes.rs
fundamentals/clyde/: get-fields.rs  sql-call.rs
fundamentals/migrations/20170219005456_trial_migration/: down.sql  up.sql
fundamentals/src/: main.rs
http_connection/: Cargo.toml
http_connection/src/: main.rs
http_connection/src/connections/: mod.rs  url-builder.rs
http_connection/src/helpers/: mod.rs
http_connection/src/mysql/: main-with-explanation.rs  mod.rs  notes.rs
http_connection/src/server/: mod.rs
http_connection/src/yoursql/: main-with-explanation.rs  making-serde-json.rs  mod.rs  notes.rs  static-get-by-id.rs
rocket_trial/: Cargo.toml
rocket_trial/src/: main.rs
yoursql/: Cargo.toml
yoursql/src/: main.rs
yoursql/src/patsql/: mod.rs  pool.rs  read.rs  retired.rs  write.rs
yoursql/src/patsql/pool/: conntest.rs  mod.rs
