[package]
name = "fundamentals"
version = "0.1.0"
authors = ["Patrick Allen <allenpatrick86@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"

serde = "*"
serde_json = "*"
serde_derive = "*"
rustc-serialize = "*"

hyper = "*"
hyper-rustls = "*"
uuid = { version = "0.3.1", features = ["v4"] }
config = "*"
error-chain = "*"
derive-error-chain = "*"

mysql = "*"

getopts = "*"
env_logger = "*"

json = "*"


[dependencies.url]
git = "https://github.com/servo/rust-url"
