[package]
name = "fundamentals"
version = "0.1.0"
authors = ["Patrick Allen <allenpatrick86@gmail.com>"]

[dependencies]
# mysql = "*"
# json = "*"
diesel = { version = "0.11.2", features = ["mysql"] }
diesel_codegen = { version = "0.11.0", features = ["mysql"] }
dotenv = "0.8.0"

# jsonsql = {version = "*", git = "https://github.com/Tokap/jsonsql" }


# [dependencies.url]
# git = "https://github.com/servo/rust-url"

# echo DATABASE_URL=mysql://root@localhost/ip_brolytics > .env
